[package]
authors = ["Metaplex Developers <dev@metaplex.com>"]
description = "MPL Core Utils library"
edition = "2021"
license-file = "../../../LICENSE"
name = "mpl-utils"
readme = "README.md"
repository = "https://github.com/metaplex-foundation/mpl-utils"
version = "0.4.1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[dependencies]
arrayref = "0.3.8"
solana-program = "2.2.18"
spl-token-2022 = { version = "6.0.0", features = [
  "no-entrypoint",
], optional = true }

[features]
default = ["spl-token"]
spl-token = ["spl-token-2022"]

[profile.release]
overflow-checks = true # Enable integer overflow checks.


